--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 <head>
 <link rel="stylesheet" href="css/cssCV.css">
 <script type="text/javascript" src="js/jsText.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Nemanja Cupara</title>
 </head>
@@ -20,13 +20,13 @@
 <div class="main">
 
 <div class="links">
-<a href="https://www.linkedin.com/in/nemanja-cupara-5ba081168/"><i class="fa fa-linkedin-square" style="font-size:48px;color:#0077B5"></i></a>
+<a href="https://www.linkedin.com/in/nemanja-cupara-5ba081168/"><i class="fa fa-linkedin-square" style="color:#0077B5"></i></a>
 <br>
 <br>
-<a href="mailto:cuparanemanja514@gmail.com?Subject=Hello%20again" target="_top"><i class="fa fa-telegram" style="font-size:48px;color:white"></i></a>
+<a href="mailto:cuparanemanja514@gmail.com?Subject=Hello%20again" target="_top"><i class="fa fa-telegram" style="color:white"></i></a>
 <br>
 <br>
-<a href="https://www.facebook.com/nemanja.cupara"><i class="fa fa-facebook-square" style="font-size:48px;color:#3b5998"></i></a>
+<a href="https://www.facebook.com/nemanja.cupara"><i class="fa fa-facebook-square" style="color:#3b5998"></i></a>
 </div>
 
 <div class="info">
@@ -44,7 +44,7 @@
      data-period="1000"
      data-rotate='[ "Hi, I am Nemanja Cupara", "just without a beard", " and glasses", "I am ", "Java Developer" ]'></span>
 	 </h1>
-<hr size="2px" color="white">
+<hr size="1vw" color="white">
 <a href="NemanjaCupara.pdf" download><button class="button button1" type="button">DOWNLOAD CV </button></a>
 </div>
 
