--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <title>AboutMe</title>
     <link rel="stylesheet" type="text/css" href="css/aboutCSS.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 <body>
 <div class="navbar">
