--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="css/indexCSS.css"> 
 <link rel="stylesheet" type="text/css" href="css/splitCSS.css"> 
 <link rel="stylesheet" type="text/css" href="css/loader.css"> 
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 
 <body onload="myFunction()">
