--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,8 @@
 <head>
 <link rel="stylesheet" href="css/cssCV.css">
 <script type="text/javascript" src="js/jsText.js"></script>
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta name="viewport" content="width=device-width,initial scale=1"/>
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Nemanja Cupara</title>
 </head>
