--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" type="text/css" href="css/indexCSS.css"> 
 <link rel="stylesheet" type="text/css" href="css/splitCSS.css"> 
 <link rel="stylesheet" type="text/css" href="css/loader.css"> 
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta name="viewport" content="width=device-width,initial scale=1"/>
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css"/>
 </head>
 
 <body onload="myFunction()">
@@ -22,7 +23,7 @@
 
 <a href="projects.html"><div class="split right">
   <div class="centered">
-    <h2>MY PROJCETS</h2>
+    <h2>MY PROJETCS</h2>
   </div>
 </div></a>
 
