--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <title>AboutMe</title>
     <link rel="stylesheet" type="text/css" href="css/aboutCSS.css">
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+	<meta name="viewport" content="width=device-width,initial scale=1"/>
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css"/>
 </head>
 <body>
 <div class="navbar">
