--- a/about.html
+++ b/about.html
@@ -12,7 +12,11 @@
   <a href="projects.html">MyProjects</a>
   <div class="navbar-left"><a href="index.html">Menu</a></div>
 </div>
+
+
+
 <div class="main">
+
 
 
     <div class="all">
@@ -33,12 +37,19 @@
             <div class="text">MySQL</div>
         </div>
     </div>
-	
-<p><h1>Just finished Java Development education on IT-Academy in Belgrade</h1></p>
-<p><h1 class="h1">I got 2 certificates: </h1></p>
-<p><h2>-Java SE8 Fundamentals</h2></p>
-<p><h2>-Certified Java Developer</h2></p>
-</div>	
-
+	<br>
+	<br>
+<div class="aboutMe">	
+<p><h1>I was graduated from highschool in Smederevska Palanka, department for natural sciences and mathematics(2012-2016).
+I studied at IT-Academy in Belgrade, department for Java Development(2017-2018).
+I got two certificates, by the end of the course:</h1>
+<h2>-Java SE8 Fundamentals</h2>
+<h2>-Certified Java Developer</h2>
+<h1>As my final project, I made a Web application in NetBeans, through Java SpringFramework and MySql database.
+This Web application represents online car renting system, with comments from users and login (possibility) for employees.
+Login role, director(manager) and employees have different access to the Web Page and database.
+I prefer FrontEnd (working), because I am better at creating web applications and pages, but also at using MySql database.</h1></p>
+</div>
+</div>
 </body>
 </html>
