--- a/cv.html
+++ b/cv.html
@@ -4,13 +4,13 @@
 <head>
 <link rel="stylesheet" href="css/cssCV.css">
 <script type="text/javascript" src="js/jsText.js"></script>
-<meta name="viewport" content="width=device-width,initial scale=1"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Nemanja Cupara</title>
 </head>
 
-<body>
+<body onload="myFunction()">
 
 <div class="navbar">
   <a href="about.html">About me</a>
@@ -20,6 +20,15 @@
 </div>  
 <div class="main">
 
+
+
+<div class="info">
+<h3>Team Player</h3>
+<h4>Ambitious</h4>
+<h5>Innovative</h5>
+<h6>Creative</h6>
+</div>
+<div class="center">
 <div class="links">
 <a href="https://www.linkedin.com/in/nemanja-cupara-5ba081168/"><i class="fa fa-linkedin-square" style="color:#0077B5"></i></a>
 <br>
@@ -29,15 +38,6 @@
 <br>
 <a href="https://www.facebook.com/nemanja.cupara"><i class="fa fa-facebook-square" style="color:#3b5998"></i></a>
 </div>
-
-<div class="info">
-<h3>Team Player</h3>
-<h3>Ambitious</h3>
-<h3>Innovative</h3>
-<h3>Creative</h3>
-</div>
-<div class="center">
-
 <img src="images/developer.jpg" >
 
 <h1> <span
@@ -55,5 +55,9 @@
 
 
 </body>
-
+<script>
+function myFunction(){
+	alert("Website is not responsive on mobile or tablet");
+}
+</script>
 </html>
