--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,24 @@
 
 	<div class="grid-container">
   <div class="grid-item"><div class="container">
-  <img src="images/rentacar1.png" class="image">
+  <div class="mySlides fade">
+  <img src="images/rentacar1.png" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <img src="images/rentacar2.png" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <img src="images/rentacar3.png" style="width:100%">
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
   <div class="overlay">
     <div class="text">
 	<h1>RENT A CAR</h1>
@@ -30,13 +47,6 @@
   </div>
 </div>
 </div>
-  <div class="grid-item"><div class="container">
-  <img src="images/rentacar1.png" class="image">
-  <div class="overlay">
-    <div class="text">Hello World</div>
-  </div>
-</div>
-</div>
 
 
 </div>
@@ -44,5 +54,25 @@
 </div>
 
 </body>
+<script>
+var slideIndex = 0;
+showSlides();
 
+function showSlides() {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
 </html>
