--- a/cv.html
+++ b/cv.html
@@ -17,10 +17,8 @@
   <a href="projects.html">MyProjects</a>
 
 <div class="navbar-left"><a href="index.html">Menu</a></div>
-</div>  
+</div>
 <div class="main">
-
-
 
 <div class="info">
 <h3>Team Player</h3>
@@ -30,22 +28,22 @@
 </div>
 <div class="center">
 <div class="links">
-<a href="https://www.linkedin.com/in/nemanja-cupara-5ba081168/"><i class="fa fa-linkedin-square" style="color:#0077B5"></i></a>
+<a href="https://www.linkedin.com/in/nemanja-cupara-5ba081168/"><i class="fa fa-linkedin-square" style="color:white"></i></a>
 <br>
 
 <a href="mailto:cuparanemanja514@gmail.com?Subject=Hello%20again" target="_top"><i class="fa fa-telegram" style="color:white"></i></a>
 <br>
 
-<a href="https://www.facebook.com/nemanja.cupara"><i class="fa fa-facebook-square" style="color:#3b5998"></i></a>
+<a href="https://www.facebook.com/nemanja.cupara"><i class="fa fa-facebook-square" style="color:white"></i></a>
 </div>
 <img src="images/developer.jpg" >
 
-<h1> <span
+<h1><span
      class="txt-rotate"
-     data-period="1000"
-     data-rotate='[ "Hi, I am Nemanja Cupara", "just without a beard", " and glasses", "I am ", "Java Developer" ]'></span>
+     data-period="2000"
+     data-rotate='[  "Hi", "I am Nemanja Cupara", "I am ", "Certified Java Developer" ]'></span>
 	 </h1>
-
+<hr color="white"></hr>
 <a href="NemanjaCupara.pdf" download><button class="button button1" type="button">DOWNLOAD CV </button></a>
 </div>
 
