--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			$(function() {
 		$(".dwn").click(function(){
         $(".stateButton").css("opacity", "1");
+		$(".stateButton").css("position", "relative");
 		$(".stateButton").css("margin-left", "0");
 		$(".stateButton").css("margin-right", "0");	
     });
