--- a/index.html
+++ b/index.html
@@ -40,18 +40,6 @@
 	x.muted = false;
 }
 	</script>
-	<script type='text/javascript'>//<![CDATA[ 
-		$(window).load(function(){
-			$(function() {
-		$(".dwn").click(function(){
-        $(".stateButton").css("opacity", "1");
-		$(".stateButton").css("position", "relative");
-		$(".stateButton").css("margin-left", "0");
-		$(".stateButton").css("margin-right", "0");	
-    });
-});
-});//]]>  
-</script>
 
 </head>
 
@@ -121,7 +109,7 @@
 				  			</h1>	
 
 				  			<div class="more animate-intro">
-				  				<div class="dwn"><a class="button stroke">
+				  				<a class="cv">
 				  					Download CV
 				  				</a>
 								</div>
